<resources>
    <string name="app_name">Melaut App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="aksi_notifikasi">Notifikasi</string>

    <string name="menu_rumah">Rumah</string>
    <string name="menu_komunitas">Komunitas</string>
    <string name="menu_editprofil">Edit Profil</string>
    <string name="nama">Name</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="daftar_dan_mulai_sekarang">Daftar dan Mulai Sekarang!</string>
    <string name="daftar_untuk_mulai_merencanakan_waktu_melaut_yang_lebih_aman_dan_produktif">Daftar untuk mulai merencanakan waktu melaut yang lebih aman dan produktif.</string>
    <string name="username">Username :</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="no_handphone">No Handphone :</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="password">Password :</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="atau_daftar_dengan">atau daftar dengan</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="masukan_username">Masukan Username</string>
    <string name="masukan_nohandphone">Masukan NoHandphone</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="masuk">Masuk</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="melaut">MELAUT</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="tidak_memiliki_akun">tidak memiliki akun</string>
    <string name="username_no_handphone">No handphone :</string>
    <string name="masuk_dan_lihat_rekomendasi_lokasi_terbaik_untuk_melaut_hari_ini">Masuk dan lihat rekomendasi lokasi terbaik untuk melaut hari ini</string>
    <string name="halo_sobat_melaut">Halo, Sobat Melaut!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bersama_melaut_temukan_waktu_terbaik_dan_lokasi_strategis_untuk_hasil_tangkapan_maksimal">Bersama MELAUT, Temukan waktu terbaik dan lokasi strategis untuk hasil tangkapan maksimal</string>
    <string name="sudah_siapkah_anda">Sudah Siapkah Anda?</string>
    <string name="melaut1">MELAUT</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="password_konfirmasi">KOnfirmasi Password</string>
</resources>