<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/main"

    android:layout_width="wrap_content"

    android:layout_height="match_parent"

    android:background="@drawable/gradient_bacground"

    android:padding="16dp">


    <!-- Logo -->

    <ImageView

        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:elevation="5dp" />

    <!-- Title -->

    <TextView

        android:id="@+id/Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/melaut"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsbold"
        android:textColor="#222222"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- Subtitle -->

    <TextView

        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_dan_mulai_sekarang"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="#222222"
        android:layout_below="@id/Text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <!-- Additional Info -->

    <TextView

        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_untuk_mulai_merencanakan_waktu_melaut_yang_lebih_aman_dan_produktif"
        android:textSize="12sp"
        android:fontFamily="@font/poppinsregular"
        android:textColor="#888888"
        android:gravity="center"
        android:layout_below="@id/TextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"/>


    <!-- Username Input -->

    <!-- Label untuk EditText -->
    <TextView
        android:id="@+id/labelUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:layout_below="@id/TextView3"
        android:text="@string/username"
        android:textColor="#888888"
        android:textSize="12sp"
        android:layout_marginBottom="5dp" />

    <!-- EditText untuk input -->
    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/labelUsername"
        android:hint="@string/masukan_username"
        android:background="@drawable/rounded_edittext"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        android:layout_marginTop="4dp" />


    <!-- Phone Number Input -->

    <!-- Label untuk Phone -->
    <TextView
        android:id="@+id/labelPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/no_handphone"
        android:textColor="#888888"
        android:textSize="12sp"
        android:layout_below="@id/username1"
        android:layout_marginTop="12dp" />

    <!-- EditText untuk Phone -->
    <EditText
        android:id="@+id/phone1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/masukan_nohandphone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        android:layout_below="@id/labelPhone"
        android:layout_marginTop="4dp" />


    <!-- Label untuk Password -->
    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/password"
        android:textColor="#888888"
        android:textSize="12sp"
        android:layout_below="@id/phone1"
        android:layout_marginTop="12dp" />

    <!-- EditText untuk Password -->
    <EditText
        android:id="@+id/passwor1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/masukan_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        android:layout_below="@id/labelPassword"
        android:layout_marginTop="7dp" />
    <TextView
        android:id="@+id/labelKonfirPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/password"
        android:textColor="#888888"
        android:textSize="12sp"
        android:layout_below="@id/passwor1"
        android:layout_marginTop="12dp" />
    <EditText
        android:id="@+id/konfirpasswor1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/masukan_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        android:layout_below="@id/labelKonfirPassword"
        android:layout_marginTop="7dp" />

    <!-- Alternative Login Text -->

    <TextView

        android:id="@+id/Login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atau_daftar_dengan"
        android:textSize="12sp"
        android:textColor="#888888"
        android:fontFamily="@font/poppinsmedium"
        android:layout_below="@id/konfirpasswor1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />


    <LinearLayout
        android:id="@+id/Button2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/Login1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <!-- Tombol Google -->
        <Button
            android:id="@+id/Button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/google"
            android:drawablePadding="8dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:elevation="4dp" />

        <!-- Tombol Facebook -->
        <Button
            android:id="@+id/Button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/facebook"
            android:drawablePadding="8dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:elevation="4dp" />
    </LinearLayout>


    <!-- Teks Login Link -->


    <Button
        android:id="@+id/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button2"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="0dp"
        android:text="@string/daftar"
        android:background="@drawable/blue_daftar"
        android:textColor="#FFFFFF"

        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button1"
        android:orientation="horizontal"
        android:gravity="center"

        android:padding="6dp">

        <!-- Teks "Sudah memiliki akun?" -->
        <TextView
            android:id="@+id/login2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_memiliki_akun"
            android:textSize="14sp"
            android:textColor="#808080"
            android:layout_marginEnd="4dp"/>

        <!-- Teks "Masuk" yang dapat diklik -->
        <TextView
            android:id="@+id/masuk"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingTop="13dp"
            android:text="@string/masuk"
            android:textSize="14sp"
            android:textColor="#2F80ED"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold" />
    </LinearLayout>



</RelativeLayout>