<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bacground"
    android:padding="16dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:elevation="5dp" />

    <!-- Title -->
    <TextView
        android:id="@+id/Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/melaut"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsbold"
        android:textColor="#222222"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/halo_sobat_melaut"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="#222222"
        android:layout_below="@id/Text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <!-- Additional Info -->
    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/masuk_dan_lihat_rekomendasi_lokasi_terbaik_untuk_melaut_hari_ini"
        android:textSize="15sp"
        android:fontFamily="@font/poppinsregular"
        android:textColor="#888888"
        android:gravity="center"
        android:layout_below="@id/TextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp" />

    <!-- Username Input -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView3"
        android:hint="No HandPhone"
        android:layout_marginTop="4dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username1"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Label untuk Password -->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_layout"
        android:hint="Kata Sandi"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwor1"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lupaPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:paddingTop="10dp"
        android:layout_below="@id/pass_layout"
        android:layout_marginEnd="16dp"
        android:text="@string/lupa_password"
        android:textColor="#FF5722"
        android:textStyle="bold"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onLupaPasswordClick" />

    <!-- Alternative Login Text -->
    <TextView
        android:id="@+id/Login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atau_daftar_dengan"
        android:paddingTop="10dp"
        android:textSize="12sp"
        android:textColor="#888888"
        android:fontFamily="@font/poppinsmedium"
        android:layout_below="@id/lupaPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/Button2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/Login1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <!-- Tombol Google -->
        <Button
            android:id="@+id/ButtonGoogle"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/google"
            android:drawablePadding="8dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:elevation="4dp" />
    </LinearLayout>

    <!-- Teks Login Link -->
    <Button
        android:id="@+id/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button2"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="0dp"
        android:text="Login"
        android:background="@drawable/blue_daftar"
        android:textColor="#FFFFFF"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button1"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="6dp">

        <!-- Teks "Sudah memiliki akun?" -->
        <TextView
            android:id="@+id/login2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidak_memiliki_akun"
            android:textSize="14sp"
            android:textColor="#808080"
            android:layout_marginEnd="4dp"/>

        <!-- Teks "Masuk" yang dapat diklik -->
        <TextView
            android:id="@+id/masuk"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingTop="13dp"
            android:text="@string/daftar"
            android:textSize="14sp"
            android:textColor="#2F80ED"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
